@startuml

interface Iterador<T> {
    + hasNext():boolean
    + next():T
}

interface Lista<T extends Comparable<T>> {
    + add(dato:T):void
    + del(dato:T):T
    + get(dato:T):T
    + isEmpty():boolean
    + getSize():int
    + getIterador():Iterador<T>
    + vaciar():void
    + existe(dato:T):boolean
    + obtenerPorPosicion(puesto:int):T
    + cambiarEnPosicion(puesto:int, nuevoDato:T):void
    + mostrarLista():String
}

class ElementoDE<T> {
    # dato: T
    # siguiente: ElementoDE<T>
    # anterior: ElementoDE<T>
    + ElementoDE(dato:T)
}

class IteradorLDE<T> {
    - actual: ElementoDE<T>
    + IteradorLDE(comienzo:ElementoDE<T>)
    + hasNext():boolean
    + next():T
}

class ListaDoblementeEnlazada<T extends Comparable<T>> {
    # primero: ElementoDE<T>
    # ultimo: ElementoDE<T>
    # tamaño: int
    + ListaDoblementeEnlazada()
    + add(dato:T):void
    + del(dato:T):T
    + get(dato:T):T
    + isEmpty():boolean
    + getSize():int
    + getIterador():Iterador<T>
    + vaciar():void
    + existe(dato:T):boolean
    + obtenerPorPosicion(puesto:int):T
    + cambiarEnPosicion(puesto:int, nuevoDato:T):void
    + mostrarLista():String
    + mostrarAlReves():String
}

class LDEOrdenada<T extends Comparable<T>> {
    + add(dato:T):void
}

IteradorLDE ..|> Iterador : implements
ListaDoblementeEnlazada ..|> Lista : implements
LDEOrdenada --|> ListaDoblementeEnlazada : extends
ListaDoblementeEnlazada *-- ElementoDE : composición
ListaDoblementeEnlazada ..> IteradorLDE : usa
IteradorLDE ..> ElementoDE : usa

note left of ListaDoblementeEnlazada
**Métodos exclusivos de ListaDoblementeEnlazada:**
mostrarAlReves: Recorre la lista de fin a inicio
getIterador: Devuelve un iterador desde el primero
end note

note left of Lista
**Métodos exclusivos de Lista:**
mostrarLista: Devuelve representación en texto
end note

note as N3
**Métodos compartidos Lista y ListaDoblementeEnlazada:**
**add**: Inserta al final
**del**: Elimina por valor
**get**: Busca por valor
**isEmpty**: Devuelve true si está vacía, false si no
**getSize**: Devuelve el número de elementos
**vaciar**: Vacía la lista
**existe**: Comprueba si existe un elemento
**obtenerPorPosicion**: Devuelve el elemento en la posición indicada
**cambiarEnPosicion**: Reemplaza el dato en la posición indicada
**mostrarLista**: Devuelve representación en texto
end note

@enduml